Fix IE x wrong spot issue
closes FALCOR-392

Test Plan
* Check that opportuniteis styling is not messed up in all browsers

Reviewed-on: https://gerrit.instructure.com/117361
Tested-by: Jenkins
QA-Review: Dan Sasaki <dsasaki@instructure.com>
Product-Review: Aaron Kc Hsu <ahsu@instructure.com>

--- a/src/components/Opportunities/styles.css
+++ b/src/components/Opportunities/styles.css
@@ -11,6 +11,7 @@
 .header {
   border-bottom: var(--borderBottom);
   text-align: end;
+  text-align: right;
   margin-bottom: 0.25rem;
 }
 
